add soldout style for link

--- a/index_front.html
+++ b/index_front.html
@@ -169,7 +169,7 @@
             <img src="images/product/01.png" alt="">
         </div>
         <span class="price">价格：590 元</span>
-        <a target="_blank" href="http://item.jd.com/1543278289.html">立即购买</a>
+        <a class="soldout" target="_blank" href="http://item.jd.com/1543278289.html">立即购买</a>
     </div>
     <div class="detail-box for_man-2">
         <button class="close">关闭</button>
