--- a/index_front.html
+++ b/index_front.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>LACOSTE LOOKBOOK</title>
+    <link href="/templates/lacoste/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
+    <title>Lacoste LT12 Lookbook</title>
     <link rel="stylesheet" href="css/css_front.css?v=20150529">
     <script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
 </head>
@@ -52,78 +53,78 @@
                                 <div _index="0" class="col" id="man-1">
                                     <div class="cadre-photo">
                                         <div class="first-photo" style="display:none;">
-                                            <img src="images/model_front/MAN1-3x3.png">
+                                            <img src="images/model_pauline/MAN1-3x3.png">
                                         </div>
                                         <div class="white-photo" style="display:none;">
-                                            <img src="images/model_front/MAN1-5x3.png">
+                                            <img src="images/model_pauline/MAN1-5x3.png">
                                         </div>
                                         <div class="anim-photo">
-                                            <img id="jc" class="photo-viensla" src="images/model_front/MAN1-1x3.png">
+                                            <img id="jc" class="photo-viensla" src="images/model_pauline/MAN1-1x3.png">
                                         </div>
                                     </div>
                                 </div>
                                 <div _index="1" class="col" id="man-2">
                                     <div class="cadre-photo">
                                         <div class="first-photo" style="display:none;">
-                                            <img src="images/model/MAN2-3x3.png">
+                                            <img src="images/model_pauline/MAN2-4x3.png">
                                         </div>
                                         <div class="white-photo" style="display:none;">
-                                            <img src="images/model/MAN2-5x3.png">
+                                            <img src="images/model_pauline/MAN2-6x3.png">
                                         </div>
                                         <div class="anim-photo">
-                                            <img id="niko" class="photo-viensla" src="images/model/MAN2-1x3.png">
+                                            <img id="niko" class="photo-viensla" src="images/model_pauline/MAN2-2x3.png">
                                         </div>
                                     </div>
                                 </div>
                                 <div _index="2" class="col" id="man-3">
                                     <div class="cadre-photo">
                                         <div class="first-photo" style="display:none;">
-                                            <img src="images/model/MAN3-3x3.png">
+                                            <img src="images/model_pauline/MAN3-3x3.png">
                                         </div>
                                         <div class="white-photo" style="display:none;">
-                                            <img src="images/model/MAN3-5x3.png">
+                                            <img src="images/model_pauline/MAN3-5x3.png">
                                         </div>
                                         <div class="anim-photo">
-                                            <img id="fred" class="photo-viensla" src="images/model/MAN3-1x3.png">
+                                            <img id="fred" class="photo-viensla" src="images/model_pauline/MAN3-1x3.png">
                                         </div>
                                     </div>
                                 </div>
                                 <div _index="3" class="col" id="man-4">
                                     <div class="cadre-photo">
                                         <div class="first-photo" style="display:none;">
-                                            <img src="images/model/MAN4-3x3.png">
+                                            <img src="images/model_pauline/MAN4-3x3.png">
                                         </div>
                                         <div class="white-photo" style="display:none;">
-                                            <img src="images/model/MAN4-5x3.png">
+                                            <img src="images/model_pauline/MAN4-5x3.png">
                                         </div>
                                         <div class="anim-photo">
-                                            <img id="fred" class="photo-viensla" src="images/model/MAN4-1x3.png">
+                                            <img id="fred" class="photo-viensla" src="images/model_pauline/MAN4-1x3.png">
                                         </div>
                                     </div>
                                 </div>
                                 <div _index="4" class="col" id="man-5">
                                     <div class="cadre-photo">
                                         <div class="first-photo" style="display:none;">
-                                            <img src="images/model/MAN5-3x3.png">
+                                            <img src="images/model_pauline/MAN5-3x3.png">
                                         </div>
                                         <div class="white-photo" style="display:none;">
-                                            <img src="images/model/MAN5-5x3.png">
+                                            <img src="images/model_pauline/MAN5-5x3.png">
                                         </div>
                                         <div class="anim-photo">
-                                            <img id="niko" class="photo-viensla" src="images/model/MAN5-1x3.png">
+                                            <img id="niko" class="photo-viensla" src="images/model_pauline/MAN5-1x3.png">
                                         </div>
                                     </div>
                                 </div>
                                 <div _index="5" class="col" id="man-6">
                                     <div class="cadre-photo">
                                         <div class="first-photo" style="display:none;">
-                                            <img src="images/model/MAN6-3x3.png">
+                                            <img src="images/model_pauline/MAN6-3x3.png">
                                         </div>
                                         <div class="white-photo" style="display:none;">
-                                            <img src="images/model/MAN6-5x3.png">
+                                            <img src="images/model_pauline/MAN6-5x3.png">
                                         </div>
                                         <div class="anim-photo">
-                                            <img id="jc" class="photo-viensla" src="images/model/MAN6-1x3.png">
+                                            <img id="jc" class="photo-viensla" src="images/model_pauline/MAN6-1x3.png?v=20150531">
                                         </div>
                                     </div>
                                 </div>
@@ -158,7 +159,7 @@
         <svg class="svg" xmlns="http://www.w3.org/2000/svg" version="1.1">
           <image x="0" y="0" height="60" width="60"  xlink:href="css/front/tennisball.svg"/>
         </svg>
-        <img src="css/front/tennisball.png" alt="" class="png">
+        <img class="png" src="css/front/tennisball.png" alt="">
         <img class="gif" style="display:none" src="css/front/tennisball.gif">
     </div>
     <!-- End Page Content -->
@@ -169,7 +170,7 @@
             <img src="images/product/01.png" alt="">
         </div>
         <span class="price">价格：590 元</span>
-        <a class="soldout" target="_blank" href="http://item.jd.com/1543278289.html">立即购买</a>
+        <a target="_blank" href="http://item.jd.com/1543278289.html">立即购买</a>
     </div>
     <div class="detail-box for_man-2">
         <button class="close">关闭</button>
@@ -178,7 +179,7 @@
             <img src="images/product/02.png" alt="">
         </div>
         <span class="price">价格：990 元</span>
-        <a target="_blank" href="http://item.jd.com/1543281789.html">立即购买</a>
+        <a class="soldout" href="javascript:;">已售罄</a>
     </div>
     <div class="detail-box for_man-3">
         <button class="close">关闭</button>
@@ -367,6 +368,8 @@
     <!-- END TC -->
 <script type="text/javascript" src="js/jquery.transit.min.js"></script>
 <script>
+    $('.loading-page').css('display','block');
+    $('.loading-page').addClass('show');
     /*set content size*/
     function setContentSize() {
         var ww = ($(window).width() < 980) ? 980 : $(window).width();
@@ -525,9 +528,9 @@
 
 
     $(".racket").click(function(){
-        if ($('.main').hasClass('showing')) {
-            return;
-        }
+        // if ($('.main').hasClass('showing')) {
+        //     return;
+        // }
         $('.main').addClass('showing');
 
         $(".detail-box").removeClass("show");
@@ -537,7 +540,7 @@
     });
 
     $(".game-guide .close").click(function(){
-        $('#tennisball').find('.png').hide();
+        $('#tennisball').find('.png,.svg').hide();
         $('#tennisball').css({'z-index':999});
         $('#tennisball').find('.gif').show();
 
@@ -546,7 +549,7 @@
         setTimeout(function() {
             $('#tennisball').find('.gif').hide();
             $('#tennisball').css({'z-index':200});
-            $('#tennisball').find('.png').show();
+            $('#tennisball').find('.png,.svg').show();
         },1000);
     });
 
@@ -569,7 +572,7 @@
         _detail.addClass("show");
     });
     $(".detail-box .close").click(function(e){
-        $('#tennisball').find('.png').hide();
+        $('#tennisball').find('.png,.svg').hide();
         $('#tennisball').find('.gif').show();
         
         $(".detail-box").removeClass("show");
@@ -578,7 +581,7 @@
         setTimeout(function() {
             $('#tennisball').find('.gif').hide();
             $('#tennisball').css({'z-index':200});
-            $('#tennisball').find('.png').show();
+            $('#tennisball').find('.png,.svg').show();
         },1000);
     });
 
@@ -658,8 +661,6 @@
     $(".tc .close").click(function(){
         $(".tc").removeClass("show");
     });
-
-
 </script>
 <script type="text/javascript" src="js/common_front.js"></script>
 </body>
